applications/deployment-platform/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deployment-platform
  labels:
    name: deployment-platform
    app.kubernetes.io/name: deployment-platform
