applications/deployment-platform/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployment-platform
  namespace: deployment-platform
spec:
  selector:
    app.kubernetes.io/name: deployment-platform
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
  type: NodePort
